--- a/config.toml
+++ b/config.toml
@@ -4,8 +4,7 @@ base_url = "/myblog/"
 
 logo_text = "Writing Place"
 
-
-theme = "terminimal"
+# theme = "terminimal"
 
 # Whether to automatically compile all Sass files in the sass directory
 compile_sass = true
@@ -25,7 +24,7 @@ highlight_code = true
 # Defaults to blue.
 # Append -light for light themes, e.g. blue-light
 # Or append -auto, e.g. blue-auto
-accent_color = "light"  # 'light' is builtin
+accent_color = "custom"  # 'light' is builtin
 
 # One of: blue, dark, green, orange, pink, red, light, auto
 # Enabling dark background will also modify primary font color to be darker.
@@ -43,6 +42,15 @@ menu_items = [
   # {name = "github", url  = "https://github.com/CallumBeaney", newtab = true},
   # {name = "about", url = "$BASE_URL/about"},
 ]
+
+# Whether to show links to earlier and later posts
+# on each post page.
+enable_post_view_navigation = true
+
+# The text shown at the bottom of a post,
+# before earlier/later post links.
+post_view_navigation_prompt = "Thanks for reading! Read other posts?"
+
 
 default_language = "en"
 
