--- a/config.toml
+++ b/config.toml
@@ -48,8 +48,7 @@ enable_post_view_navigation = true
 
 # The text shown at the bottom of a post,
 # before earlier/later post links.
-post_view_navigation_prompt = "Thanks for reading! Read other posts?"
-
+post_view_navigation_prompt = "other posts:"
 
 default_language = "en"
 
