--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 # The URL the site will be built for
-base_url = "/blogge/"
+base_url = "/blogge"
 
 logo_text = "Writing Place"
 
@@ -36,7 +36,7 @@ menu_items = [
     {name = "home", url = "$BASE_URL/"},
     {name = "info", url = "$BASE_URL/info"},
 
-  # {name = "archive", url = "$BASE_URL/archive"},
+    {name = "links", url = "$BASE_URL/links/articles"},
   # {name = "website", url = "https://callumbeaney.github.io", newtab = true},
   # {name = "github", url  = "https://github.com/CallumBeaney", newtab = true},
   # {name = "about", url = "$BASE_URL/about"},
