--- a/config.toml
+++ b/config.toml
@@ -55,4 +55,4 @@ default_language = "en"
 # Use full Hack character set, not just a subset.
 # Switch this to true if you need full unicode support.
 # Defaults to false.
-use_full_hack_font = true
+use_full_hack_font = false
