--- a/themes/terminimal/theme.toml
+++ b/themes/terminimal/theme.toml
@@ -31,7 +31,7 @@ accent_color = "blue"
 background_color = "blue"
 
 # The logo text - defaults to 2 non-breaking spaces.
-logo_text = "Writing Place"
+logo_text = "writing place"
 
 
 # Whether to show links to earlier and later posts
